--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
-name: 'Lint Code'
+name: Linting Workflow
 
 on:
   push:
-    branches: [master, main]
+    branches:
+      - main
   pull_request:
-    branches: [master, main]
+    branches:
+      - main
 
 jobs:
   lint_python:
@@ -12,48 +14,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.12
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
+      - name: Install Dependencies
+        run: pip install flake8
 
-    - name: Print working directory
-      run: pwd
+      - name: Run Python Linting
+        run: flake8 server/**/*.py
 
-    - name: Run Linter
-      run: |
-        pwd
-        # This command finds all Python files recursively and runs flake8 on them
-        find . -name "*.py" -exec flake8 {} +
-        echo "Linted all the python files successfully"
+      - name: Linting Completed
+        run: echo "Python linting completed successfully."
 
-  lint_js:
-      name: Lint JavaScript Files
-      runs-on: ubuntu-latest
+  lint_function_js:
+    name: Lint JavaScript Files
+    runs-on: ubuntu-latest
 
-      steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
 
       - name: Install JSHint
-        run: npm install jshint --global
+        run: npm install -g jshint
 
-      - name: Run Linter
-        run: |
-          # This command finds all JavaScript files recursively and runs JSHint on them
-          find ./server/database -name "*.js" -exec jshint {} +
-          echo "Linted all the js files successfully"
+      - name: Run JavaScript Linting
+        run: jshint database/**/*.js
+
+      - name: Linting Completed
+        run: echo "JavaScript linting completed successfully."
