--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   lint_python:
     name: Lint Python Files
@@ -20,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.10  # Replace with a supported version
 
       - name: Install Dependencies
         run: pip install flake8
