--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,59 @@
-name: Linting Workflow
+name: 'Lint Code'
 
 on:
   push:
-    branches:
-      - main
+    branches: [master, main]
   pull_request:
-    branches:
-      - main
+    branches: [master, main]
+
 jobs:
   lint_python:
     name: Lint Python Files
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10  # Replace with a supported version
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.12
 
-      - name: Install Dependencies
-        run: pip install flake8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
 
-      - name: Run Python Linting
-        run: flake8 server/**/*.py
+    - name: Print working directory
+      run: pwd
 
-      - name: Linting Completed
-        run: echo "Python linting completed successfully."
+    - name: Run Linter
+      run: |
+        pwd
+        # This command finds all Python files recursively and runs flake8 on them
+        find . -name "*.py" -exec flake8 {} +
+        echo "Linted all the python files successfully"
 
-  lint_function_js:
-    name: Lint JavaScript Files
-    runs-on: ubuntu-latest
+  lint_js:
+      name: Lint JavaScript Files
+      runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14
 
       - name: Install JSHint
-        run: npm install -g jshint
+        run: npm install jshint --global
 
-      - name: Run JavaScript Linting
-        run: jshint database/**/*.js
-
-      - name: Linting Completed
-        run: echo "JavaScript linting completed successfully."
+      - name: Run Linter
+        run: |
+          # This command finds all JavaScript files recursively and runs JSHint on them
+          find ./server/database -name "*.js" -exec jshint {} +
+          echo "Linted all the js files successfully"
