--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,37 @@
-name: 'Lint Code'
+name: 'Lint code'
+
 on:
   push:
-    branches: [master, main]
+    branches:
+      - main
   pull_request:
-    branches: [master, main]
+    branches:
+      - main
+
 jobs:
   lint_python:
     name: Lint Python Files
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.14
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-    - name: Print working directory
-      run: pwd
-    - name: Run Linter
-      run: |
-        pwd
-        # This command finds all Python files recursively and runs flake8 on them
-        find . -name "*.py" -exec flake8 {} +
-        echo "Linted all the python files successfully"
-        
- lint_function_js:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.14
+
+      - name: Install Dependencies
+        run: pip install flake8
+
+      - name: Run Python Linting
+        run: flake8 server/**/*.py
+
+      - name: Linting Completed
+        run: echo "Python linting completed successfully."
+
+  lint_function_js:
     name: Lint JavaScript Files
     runs-on: ubuntu-latest
 
