--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,59 @@
-lint_python:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+name: 'Lint Code'
 
+on:
+  push:
+    branches: [master, main]
+  pull_request:
+    branches: [master, main]
+
+jobs:
+  lint_python:
+    name: Lint Python Files
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: 3.12
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install flake8
 
-    - name: Run Python linting
-      run: flake8 server/**/*.py
+    - name: Print working directory
+      run: pwd
 
-    - name: Complete message
-      run: echo "Linting for Python files completed successfully."
+    - name: Run Linter
+      run: |
+        pwd
+        # This command finds all Python files recursively and runs flake8 on them
+        find. -name "*.py" -exec flake8 {} +
+        echo "Linted all the Python files successfully"
 
-lint_function_js:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+  lint_js:
+      name: Lint JavaScript Files
+      runs-on: ubuntu-latest
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+      steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Install JSHint
-      run: npm install -g jshint
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
-    - name: Run JavaScript linting
-      run: jshint database/**/*.js
+      - name: Install JSHint
+        run: npm install jshint --global
 
-    - name: Complete message
-      run: echo "Linting for JavaScript files completed successfully."
+      - name: Run Linter
+        run: |
+          # This command finds all JavaScript files recursively and runs JSHint on them
+          find ./server/database -name "*.js" -exec jshint {} +
+          echo "Linted all the js files successfully"
