--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,23 +32,21 @@ jobs:
         echo "Linted all the Python files successfully"
 
   lint_js:
-    name: Lint JavaScript Files
-    runs-on: ubuntu-latest
+  name: Lint JavaScript Files
+  runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+  steps:
+  - name: Checkout Repository
+    uses: actions/checkout@v3
 
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+  - name: Install Node.js
+    uses: actions/setup-node@v3
+    with:
+      node-version: 18
 
-    - name: Install JSHint
-      run: npm install jshint --global
+  - name: Install ESLint
+    run: npm install eslint --global
 
-    - name: Run JavaScript Linter
-      run: |
-        # Find all JavaScript files recursively and lint them
-        find . -name "*.js" -exec jshint {} +
-        echo "Linted all the JavaScript files successfully"
+  - name: Run ESLint
+    run: eslint . --ext .js,.jsx
+
