--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Linting Workflow
+name: 'Lint Code'
 
 on:
   push:
@@ -8,39 +8,47 @@ on:
 
 jobs:
   lint_python:
-    name: Lint Python Code
+    name: Lint Python Files
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-        
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
-        
-      - name: Lint Python files
-        run: flake8 .
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+
+    - name: Run Linter
+      run: |
+        echo "Running flake8 linter..."
+        find . -name "*.py" -exec flake8 {} +
+        echo "Linted all Python files successfully"
 
   lint_js:
-    name: Lint JavaScript Code
+    name: Lint JavaScript Files
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-        
-      - name: Install dependencies
-        run: npm install
-        
-      - name: Lint JavaScript files
-        run: npm run lint
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install JSHint
+      run: npm install jshint --global
+
+    - name: Run Linter
+      run: |
+        echo "Running JSHint linter..."
+        find ./server/database -name "*.js" -exec jshint {} +
+        echo "Linted all JavaScript files successfully"
